--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.4",
   "description": "A high-performance file system library for React Native using TurboModules.",
   "source": "./src/index.tsx",
-  "main": "lib/commonjs/index.js",
-  "module": "lib/module/index.js",
+  "main": "./lib/commonjs/index.js",
+  "module": "./lib/module/index.js",
   "exports": {
     ".": {
       "import": {
@@ -66,7 +66,6 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
     "@evilmartians/lefthook": "^1.5.0",
-    "@react-native-community/bob": "^0.17.1",
     "@react-native-community/cli": "15.0.1",
     "@react-native/eslint-config": "^0.73.1",
     "@release-it/conventional-changelog": "^9.0.2",
@@ -200,16 +199,5 @@
     "type": "turbo-module",
     "languages": "cpp",
     "version": "0.45.5"
-  },
-  "react-native": "src/index.tsx",
-  "types": "lib/typescript/src/index.d.ts",
-  "@react-native-community/bob": {
-    "source": "src",
-    "output": "lib",
-    "targets": [
-      "commonjs",
-      "module",
-      "typescript"
-    ]
   }
 }
